# ML-Techniques-For-Lang-Scripts

./: BlockViews.py  README.md  edgeDetection.py  evaluate_similarity.py  pyproject.toml  util.py
DataSet/English/: English.txt  image_generator.py
dsp/: audioframes.py  dftstream.py  features.py  multifileaudioframes.py  pca.py  rmsstream.py  utils.py
